--- a/lms/admin/bootstrap/css/index - Copy.css
+++ b/lms/admin/bootstrap/css/index - Copy.css
@@ -1,5 +1,5 @@
 body { 
-	background: url(../admin/images/index1.jpg) no-repeat center center fixed;
+	background-image: url(../../images/index1.jpg) no-repeat center center fixed;
 	-webkit-background-size: cover !important; 
 	-moz-background-size: cover !important; 
 	-o-background-size: cover !important; 
